@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 0d4adfae3247743cbc7784e28cd9293cef8d6ab8 ChangeLog
+SHA1 9a25ff6710344f07a2a4bb6ff495f34b8710e1d7 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 00959dbc061567e5b4270241d14c009722a94d9c META.yml
-SHA1 f33c6f10fdc33f09248124159851123102772faa Makefile.PL
+SHA1 0e486814ff28c48f6b59ce52e4da96fbad60306d META.yml
+SHA1 12ba30dc92320f9a99560985f3fc26b8c89e30d2 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 a0b388baadc029a76dd93b2f9147d8bdd49a06ac lib/Net/FullAuto.pm
+SHA1 d5349ea457720af4ba2baf4704094467700a90a6 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTwuArAAoJEBa/9Pad787EmS4H/0Sx8s7+HUWIIBx9B4Gq3L6Y
-ss1sRS3zWzj6wyCqPwWvkrdgVhBRGV5QEUku/I81Nm9zhXw+KWnqhqCD6nAwSVsv
-rH19tyB5f9gjnrmn+6BCOkNA8rrHnOTC9PASfXc/RbG5jtLi7zWr/akBQ3KWTem0
-Tjkmu4NMRBZ4wCPwK6maXID4RRZQt5o7HbWyW+Zr2IvZg+tYbJuPkyMLCNPlODvu
-3T1xGtiayfw926FGIaSGz7caBWc5tphHbAEKwd9S0iNxhae3pmnOSITDjrDOIk2o
-QxWWlQuWRUS7FyiQbDcV6hqnTfQgPyn3xKkD6FqR8RTPz1ayDGvTAIwJrUkbs7w=
-=IXRk
+iQEcBAEBAgAGBQJTwxx5AAoJEBa/9Pad787EIZQH/jS98rPukk3bKJPMSvQbZJ8k
+bFnV7VjKPyY5v3NMvqGsuBqMKBJc3Xo1MWEQjWKlAY3DEHISciT62xHe0L3FmIGr
+csSbdyBn5g/apDUMe3jXtUCVs2REbrGmcCc/Iyq7FdTci+yoDNbnovFhL8auvoUD
+8MFmO6ob/dX3YKcMRmzXN41FYoyiFbV5KErBI9JVPt/zPm0waCpaiHEkCs+dF2L9
+s20gOEqka8Kv32SkKSZtj7wwE9xyOm0jyEztceABsFt00WthzkKMH+bjgTRJ7kbo
+8gAtelmtVc/khVbvb2nSfU9l78ExQIN1yq6EGidSPNuUTxBOEy6KG5qQS6252Nw=
+=2YZ2
 -----END PGP SIGNATURE-----
