@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999948';
+our $VERSION='0.9999999949';
 
 
 use 5.005;
